just a test commit

--- a/src/style.css
+++ b/src/style.css
@@ -80,6 +80,7 @@ button:focus-visible {
 
 
 /*CSS FLEXBOX */
+
 .flexbox-container{
   display: flex;
   flex-direction: column;
@@ -87,6 +88,7 @@ button:focus-visible {
 
 }
 
+/*
 .mode-switcher{
   display: flex;
   flex-direction: column;
